[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/games/game1/game1.gd" id="1_ckgv3"]
[ext_resource type="PackedScene" path="res://scenes/games/game1/player_jet.tscn" id="2_m7hnr"]

[node name="FreedomFighterJet" type="Node3D"]
script = ExtResource("1_ckgv3")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 0, 10, 0)
light_color = Color(1, 0.956863, 0.839216, 1)
light_energy = 2.0
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 5, 8)
current = true

[node name="PlayerJet" parent="." instance=ExtResource("2_m7hnr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="ControlPanel" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScoreLabel" type="Label" parent="UI/ControlPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="JoystickControl" type="Control" parent="UI/ControlPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = -50.0
grow_vertical = 0

[node name="JoystickBackground" type="TextureRect" parent="UI/ControlPanel/JoystickControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="JoystickHandle" type="TextureRect" parent="UI/ControlPanel/JoystickControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="FireButton" type="Button" parent="UI/ControlPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -150.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "FIRE"

[node name="LockOnProgress" type="ProgressBar" parent="UI/ControlPanel"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2
max_value = 1.0
step = 0.01
show_percentage = false

[node name="GameTitle" type="Label" parent="UI/ControlPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Freedom Fighter Jet"
horizontal_alignment = 1

[node name="Clouds" type="Node3D" parent="."]

[node name="Mountains" type="Node3D" parent="."]

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="pressed" from="UI/ControlPanel/FireButton" to="." method="_on_fire_button_pressed"]
